Updated meta tags on head.html

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ linkedin:       'https://www.linkedin.com/in/kingsor'
 twitter:        'https://twitter.com/kingsor'
 gplus:          'https://plus.google.com/u/0/+EdoardoInamo'
 github:         'https://github.com/kingsor'
+twitter_name:	'@kingsor'
 
 # Google Analytics
 gahandler: 'UA-3163855-4'
