--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ highlighter: pygments
 permalink:        /:year/:month/:day/:title/
 
 # Setup
-title:            'One inch, at a time'
+title:            'One inch at a time'
 description:      'My journey in software development and beyond'
 
 # Author Details
