--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Configurations
 markdown: kramdown
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
-highlighter: pygments
+highlighter: rouge
 
 # Permalinks
 permalink:        /:year/:month/:day/:title/
