--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ permalink:        /:year/:month/:day/:title/
 # Setup
 title:            'One inch at a time'
 description:      'My journey in software development and beyond'
+baseurl:          /
+
 
 # Author Details
 author:         'Kingsor'
@@ -28,6 +30,7 @@ disqushandler: false
 
 # Blog Configurations
 paginate: 5
+
 destination: ./_site
 
 # Custom vars
