Added medium to social references

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ linkedin:       'https://www.linkedin.com/in/kingsor'
 twitter:        'https://twitter.com/kingsor'
 gplus:          'https://plus.google.com/u/0/+EdoardoInamo'
 github:         'https://github.com/kingsor'
+medium:         'https://medium.com/@kingsor'
 twitter_name:	'@kingsor'
 
 # Google Analytics
