Added missing files for Chirpy theme

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
+# hidden files
+.*
+!.git*
+!.editorconfig
+!.nojekyll
+!.travis.yml
+
+# bundler cache
 _site
-debug.log
+vendor
+Gemfile.lock
+
+# rubygem
+*.gem
+
+# npm dependencies
+node_modules
+package-lock.json
