Add new js library
- lazy-youtube-embed-js

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,7 +3,7 @@
 -
   type: linkedin
   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-  url:  'https://www.linkedin.com/in/kingsor'  # Fill with your Linkedin homepage
+  url:  'https://www.linkedin.com/in/edoardo-inamo-2431168'  # Fill with your Linkedin homepage
 -
   type: github
   icon: 'fab fa-github-alt'
