--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://edodev-hugo.netlify.app/"
+baseURL = "https://kingsor.github.io/"
 defaultContentLanguage = "it"
 defaultContentLanguageInSubdir = true
 theme = "anatole"
