--- a/hugo.toml
+++ b/hugo.toml
@@ -56,7 +56,7 @@ pagination.pagerSize = 5
     weight = 1
     languageCode = "it"
     languageName = "Ita"
-    contentDir = "content/italian"
+    contentDir = "content/it"
 
 [languages.it.params]
     title = "Edoardo Inamo - Product-Oriented Software Developer"
@@ -72,8 +72,8 @@ pagination.pagerSize = 5
     
 [[languages.it.menu.main]]
     name = "Blog"
-    identifier = "posts"
-    url = "/it/post/"
+    identifier = "blog"
+    url = "/it/blog/"
     weight = 200
 
 [[languages.it.menu.main]]
@@ -92,7 +92,7 @@ pagination.pagerSize = 5
     weight = 2
     languageCode = "en"
     languageName = "Eng"
-    contentDir = "content/english"
+    contentDir = "content/en"
     
 [languages.en.params]
     title = "Edoardo Inamo - Product-Oriented Software Developer"
@@ -108,8 +108,8 @@ pagination.pagerSize = 5
     
 [[languages.en.menu.main]]
     name = "Blog"
-    identifier = "posts"
-    url = "/en/post/"
+    identifier = "blog"
+    url = "/en/blog/"
     weight = 200
 
 [[languages.en.menu.main]]
