Update apex domain in hugo.toml

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://kingsor.github.io/"
+baseURL = "https://edoardoinamo.it/"
 defaultContentLanguage = "it"
 defaultContentLanguageInSubdir = true
 theme = "anatole"
